# sandbox

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: canvas_display.rs  colors.rs  element.rs  main.rs  ui.rs  world.rs
src/world/: mod.rs  transmute.rs
wix/: main.wxs
