[package]
name = "sandbox"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
rand_xorshift = "0.4.0"
imgui-sdl2 = "0.15.3"
imgui = "0.11.0"
imgui-opengl-renderer = "0.12.1"
gl = "0.14.0"
strum = "0.27.2"
strum_macros = "0.27.2"

[dependencies.sdl2]
version = "0.36.0"
default-features = true

[lints.clippy]
needless_range_loop = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"