[package]
name = "sandbox"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
authors = ["Lukas Kirschner"]
description = "A simple 2D falling sand physics game"
documentation = "https://github.com/lukas-kirschner/sandbox"
repository = "https://github.com/lukas-kirschner/sandbox"
homepage = "https://github.com/lukas-kirschner/sandbox"
readme = "README.md"

[dependencies]
rand = "0.9.2"
rand_xorshift = "0.4.0"
imgui-sdl2 = "0.15.3"
imgui = "0.11.0"
imgui-opengl-renderer = "0.12.1"
gl = "0.14.0"
strum = "0.27.2"
strum_macros = "0.27.2"
gl_loader = "0.1.2"

[dependencies.sdl2]
version = "0.36.0"
default-features = true

[lints.clippy]
needless_range_loop = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"

[package.metadata.wix]
culture = "En-Us"
path-guid = "F754CC8B-B1E8-4BB2-8EB1-B5CEF5EF9E2F"
upgrade-guid = "9D40401A-4F9C-48B7-A55C-312B174C6B18"