[package]
name = "sandbox"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
authors = ["Lukas Kirschner"]
description = "A simple 2D falling sand physics game"
documentation = "https://github.com/lukas-kirschner/sandbox"
repository = "https://github.com/lukas-kirschner/sandbox"
homepage = "https://github.com/lukas-kirschner/sandbox"
readme = "README.md"

[dependencies]
rand = "0.9.2"
rand_xorshift = "0.4.0"
strum = "0.27.2"
strum_macros = "0.27.2"
egui_sdl2_canvas = { git = "https://github.com/MatthieuHAMEL/egui_sdl2_canvas" }
egui_sdl2_platform = "0.3"
egui = "0.27.2"
egui_extras = { version = "0.27.2", features = ["all_loaders", "image"] }
image = { version = "0.24", default-features = false, features = ["png"] }
embedded-graphics = "0.8.1"
itertools = "0.14.0"

[dependencies.sdl2]
version = "0.37.0"
default-features = true

[lints.clippy]
needless_range_loop = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
match_like_matches_macro = "allow"

[package.metadata.wix]
culture = "En-Us"
path-guid = "F754CC8B-B1E8-4BB2-8EB1-B5CEF5EF9E2F"
upgrade-guid = "9D40401A-4F9C-48B7-A55C-312B174C6B18"